rust/macros/tests/invalid/target/rls/debug/deps/macros-8c1693353bb47760.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\macros-8c1693353bb47760.rmeta: e:\playground\Exercism\ Solutions\rust\macros\src\lib.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\macros-8c1693353bb47760.d: e:\playground\Exercism\ Solutions\rust\macros\src\lib.rs

e:\playground\Exercism\ Solutions\rust\macros\src\lib.rs:
